[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"] }
prost = "0.9.0"
dashmap = "5.2.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
anyhow = "1.0.56"
tokio-util = { version = "0.7.0", features = ["codec"] }
futures = "0.3.21"
bytes = "1.1.0"

[[bin]]
name = "server"

[[bin]]
name = "client"


[build-dependencies]
prost-build = { version = "0.9.0" }
